// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`<HorizontalAutoScroller /> > should match the snapshot for 8 items 1`] = `
<div
  class="theme_OD_Base__j49br80"
  data-od-component="provider"
>
  <div
    class="elementReset_resetVariants__18vhvlid elementReset_resetVariants_as_div__18vhvlie elementReset_block__18vhvli4 sprinkles_display_flex_mobile__onxwjuf5 sprinkles_flexDirection_column_mobile__onxwjuyh sprinkles_gap_5_mobile__onxwjur5"
    data-od-component="stack"
  >
    <div
      class="elementReset_resetVariants__18vhvlid elementReset_resetVariants_as_div__18vhvlie elementReset_block__18vhvli4"
    >
      <div
        class="elementReset_resetVariants__18vhvlid elementReset_resetVariants_as_div__18vhvlie elementReset_block__18vhvli4 sprinkles_overflow_hidden_mobile__onxwjug1 sprinkles_position_relative_mobile__onxwjuh1"
      >
        <div
          class="elementReset_resetVariants__18vhvlid elementReset_resetVariants_as_div__18vhvlie elementReset_block__18vhvli4 sprinkles_display_flex_mobile__onxwjuf5 sprinkles_position_absolute_mobile__onxwjuh5 sprinkles_alignItems_center_mobile__onxwjuvd sprinkles_justifyContent_start_mobile__onxwjuxl HorizontalAutoScroller_controllerBtn__2i92q00 HorizontalAutoScroller_prevBtn__2i92q02"
        >
          <button
            class="elementReset_resetVariants__18vhvlid elementReset_resetVariants_as_button__18vhvli12 elementReset_trimmedElement__18vhvli0 elementReset_button__18vhvli5 Button_button__p2yon56 Button__p2yon53 sprinkles_borderBottomStyle_none__onxwju86 sprinkles_borderLeftStyle_none__onxwju84 sprinkles_borderRightStyle_none__onxwju88 sprinkles_borderTopStyle_none__onxwju8a sprinkles_alignItems_center_mobile__onxwjuvd sprinkles_borderRadius_md_mobile__onxwjukd sprinkles_fontWeight_semiBold__onxwjue5 sprinkles_gap_1_mobile__onxwjuqp sprinkles_justifyContent_center_mobile__onxwjux1 sprinkles_position_relative_mobile__onxwjuh1 sprinkles_width_fit-content_mobile__onxwjupd focusOutline_focusOutlineStyle__tq83zq0 Button_button_size_medium__p2yon58 Button_button_shape_iconOnly__p2yon5c Button_button_intent_secondary__p2yon5f Button_button_minimal_false__p2yon5l Button_button_rounded_true__p2yon5m Button__p2yon54 sprinkles_borderRadius_pill_mobile__onxwjukt Button_button_compound_5__p2yon5u"
            type="button"
          >
            <span
              class="elementReset_resetVariants__18vhvlid elementReset_resetVariants_as_span__18vhvlim  sprinkles_display_block_mobile__onxwjuex Icon_makeResponsiveStyle_key_bp__1gy3ire4"
              data-od-component="icon"
            >
              <svg
                aria-hidden="true"
                class="elementReset_resetVariants__18vhvlid elementReset_resetVariants_as_div__18vhvlie elementReset_block__18vhvli4 sprinkles_display_block_mobile__onxwjuex sprinkles_width_full_mobile__onxwjupp sprinkles_height_full_mobile__onxwjuo5"
                fill="currentColor"
                focusable="false"
                viewBox="0 0 256 256"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M165.66 202.34a8 8 0 0 1-11.32 11.32l-80-80a8 8 0 0 1 0-11.32l80-80a8 8 0 0 1 11.32 11.32L91.31 128z"
                />
              </svg>
            </span>
          </button>
        </div>
        <div
          class="elementReset_resetVariants__18vhvlid elementReset_resetVariants_as_div__18vhvlie elementReset_block__18vhvli4 sprinkles_overflow_hidden_mobile__onxwjug1 sprinkles_width_full_mobile__onxwjupp useNegativeMarginLeft_makeResponsiveStyle_key_bp__10sqwm2g useNegativeMarginTop_makeResponsiveStyle_key_bp__rvovxwg Columns__15fwc182h Columns__15fwc1828 sprinkles_display_flex_mobile__onxwjuf5 sprinkles_flexDirection_row_mobile__onxwjuyd Columns_columnsStyle_align_stretch__15fwc182i Columns__15fwc1829 sprinkles_alignContent_stretch_mobile__onxwjuup sprinkles_alignItems_stretch_mobile__onxwjuw1 Columns_columnsStyle_noWrap_true__15fwc182o Columns__15fwc182f sprinkles_flexWrap_nowrap_mobile__onxwjuzh Columns_columnsStyle_wrappingDirection_default__15fwc182p"
          data-od-component="columns"
        >
          <div
            class="elementReset_resetVariants__18vhvlid elementReset_resetVariants_as_div__18vhvlie elementReset_block__18vhvli4 Columns_makeResponsiveStyle_key_bp__15fwc18g Columns_makeResponsiveStyle_key_bp__15fwc181k Column_columnStyle__1ycz12q1g Column_columnStyle_grow_false__1ycz12q1n Column__1ycz12q1e sprinkles_flexGrow_0_mobile__onxwjuyx Column_columnStyle_noShrink_true__1ycz12q1o Column__1ycz12q1f sprinkles_flexShrink_0_mobile__onxwjuz9"
          >
            <div
              class="elementReset_resetVariants__18vhvlid elementReset_resetVariants_as_div__18vhvlie elementReset_block__18vhvli4 sprinkles_display_flex_mobile__onxwjuf5 sprinkles_height_full_mobile__onxwjuo5 sprinkles_width_full_mobile__onxwjupp HorizontalAutoScroller_controllerCol__2i92q01"
            >
              <span />
            </div>
          </div>
          <div
            class="elementReset_resetVariants__18vhvlid elementReset_resetVariants_as_div__18vhvlie elementReset_block__18vhvli4 Columns_makeResponsiveStyle_key_bp__15fwc18g Columns_makeResponsiveStyle_key_bp__15fwc181k Column_flexBasis_1/2_mobile__1ycz12q0 Column_columnStyle__1ycz12q1g Column_columnStyle_grow_false__1ycz12q1n Column__1ycz12q1e sprinkles_flexGrow_0_mobile__onxwjuyx Column_columnStyle_noShrink_true__1ycz12q1o Column__1ycz12q1f sprinkles_flexShrink_0_mobile__onxwjuz9 Column_columnStyle_alignSelf_stretch__1ycz12q1k Column__1ycz12q1b sprinkles_alignSelf_stretch_mobile__onxwjuwx"
          >
            <div
              class="elementReset_resetVariants__18vhvlid elementReset_resetVariants_as_div__18vhvlie elementReset_block__18vhvli4 sprinkles_display_flex_mobile__onxwjuf5 sprinkles_height_full_mobile__onxwjuo5 sprinkles_width_full_mobile__onxwjupp sprinkles_justifyContent_stretch_mobile__onxwjuxp"
            >
              <div
                class="elementReset_resetVariants__18vhvlid elementReset_resetVariants_as_div__18vhvlie elementReset_block__18vhvli4 sprinkles_width_full_mobile__onxwjupp HorizontalAutoScroller_item__2i92q04 HorizontalAutoScroller_active__2i92q05"
              >
                <span />
              </div>
            </div>
          </div>
          <div
            class="elementReset_resetVariants__18vhvlid elementReset_resetVariants_as_div__18vhvlie elementReset_block__18vhvli4 Columns_makeResponsiveStyle_key_bp__15fwc18g Columns_makeResponsiveStyle_key_bp__15fwc181k Column_flexBasis_1/2_mobile__1ycz12q0 Column_columnStyle__1ycz12q1g Column_columnStyle_grow_false__1ycz12q1n Column__1ycz12q1e sprinkles_flexGrow_0_mobile__onxwjuyx Column_columnStyle_noShrink_true__1ycz12q1o Column__1ycz12q1f sprinkles_flexShrink_0_mobile__onxwjuz9 Column_columnStyle_alignSelf_stretch__1ycz12q1k Column__1ycz12q1b sprinkles_alignSelf_stretch_mobile__onxwjuwx"
          >
            <div
              class="elementReset_resetVariants__18vhvlid elementReset_resetVariants_as_div__18vhvlie elementReset_block__18vhvli4 sprinkles_display_flex_mobile__onxwjuf5 sprinkles_height_full_mobile__onxwjuo5 sprinkles_width_full_mobile__onxwjupp sprinkles_justifyContent_stretch_mobile__onxwjuxp"
            >
              <div
                class="elementReset_resetVariants__18vhvlid elementReset_resetVariants_as_div__18vhvlie elementReset_block__18vhvli4 sprinkles_width_full_mobile__onxwjupp HorizontalAutoScroller_item__2i92q04"
              >
                <span />
              </div>
            </div>
          </div>
          <div
            class="elementReset_resetVariants__18vhvlid elementReset_resetVariants_as_div__18vhvlie elementReset_block__18vhvli4 Columns_makeResponsiveStyle_key_bp__15fwc18g Columns_makeResponsiveStyle_key_bp__15fwc181k Column_flexBasis_1/2_mobile__1ycz12q0 Column_columnStyle__1ycz12q1g Column_columnStyle_grow_false__1ycz12q1n Column__1ycz12q1e sprinkles_flexGrow_0_mobile__onxwjuyx Column_columnStyle_noShrink_true__1ycz12q1o Column__1ycz12q1f sprinkles_flexShrink_0_mobile__onxwjuz9 Column_columnStyle_alignSelf_stretch__1ycz12q1k Column__1ycz12q1b sprinkles_alignSelf_stretch_mobile__onxwjuwx"
          >
            <div
              class="elementReset_resetVariants__18vhvlid elementReset_resetVariants_as_div__18vhvlie elementReset_block__18vhvli4 sprinkles_display_flex_mobile__onxwjuf5 sprinkles_height_full_mobile__onxwjuo5 sprinkles_width_full_mobile__onxwjupp sprinkles_justifyContent_stretch_mobile__onxwjuxp"
            >
              <div
                class="elementReset_resetVariants__18vhvlid elementReset_resetVariants_as_div__18vhvlie elementReset_block__18vhvli4 sprinkles_width_full_mobile__onxwjupp HorizontalAutoScroller_item__2i92q04"
              >
                <span />
              </div>
            </div>
          </div>
          <div
            class="elementReset_resetVariants__18vhvlid elementReset_resetVariants_as_div__18vhvlie elementReset_block__18vhvli4 Columns_makeResponsiveStyle_key_bp__15fwc18g Columns_makeResponsiveStyle_key_bp__15fwc181k Column_flexBasis_1/2_mobile__1ycz12q0 Column_columnStyle__1ycz12q1g Column_columnStyle_grow_false__1ycz12q1n Column__1ycz12q1e sprinkles_flexGrow_0_mobile__onxwjuyx Column_columnStyle_noShrink_true__1ycz12q1o Column__1ycz12q1f sprinkles_flexShrink_0_mobile__onxwjuz9 Column_columnStyle_alignSelf_stretch__1ycz12q1k Column__1ycz12q1b sprinkles_alignSelf_stretch_mobile__onxwjuwx"
          >
            <div
              class="elementReset_resetVariants__18vhvlid elementReset_resetVariants_as_div__18vhvlie elementReset_block__18vhvli4 sprinkles_display_flex_mobile__onxwjuf5 sprinkles_height_full_mobile__onxwjuo5 sprinkles_width_full_mobile__onxwjupp sprinkles_justifyContent_stretch_mobile__onxwjuxp"
            >
              <div
                class="elementReset_resetVariants__18vhvlid elementReset_resetVariants_as_div__18vhvlie elementReset_block__18vhvli4 sprinkles_width_full_mobile__onxwjupp HorizontalAutoScroller_item__2i92q04"
              >
                <span />
              </div>
            </div>
          </div>
          <div
            class="elementReset_resetVariants__18vhvlid elementReset_resetVariants_as_div__18vhvlie elementReset_block__18vhvli4 Columns_makeResponsiveStyle_key_bp__15fwc18g Columns_makeResponsiveStyle_key_bp__15fwc181k Column_flexBasis_1/2_mobile__1ycz12q0 Column_columnStyle__1ycz12q1g Column_columnStyle_grow_false__1ycz12q1n Column__1ycz12q1e sprinkles_flexGrow_0_mobile__onxwjuyx Column_columnStyle_noShrink_true__1ycz12q1o Column__1ycz12q1f sprinkles_flexShrink_0_mobile__onxwjuz9 Column_columnStyle_alignSelf_stretch__1ycz12q1k Column__1ycz12q1b sprinkles_alignSelf_stretch_mobile__onxwjuwx"
          >
            <div
              class="elementReset_resetVariants__18vhvlid elementReset_resetVariants_as_div__18vhvlie elementReset_block__18vhvli4 sprinkles_display_flex_mobile__onxwjuf5 sprinkles_height_full_mobile__onxwjuo5 sprinkles_width_full_mobile__onxwjupp sprinkles_justifyContent_stretch_mobile__onxwjuxp"
            >
              <div
                class="elementReset_resetVariants__18vhvlid elementReset_resetVariants_as_div__18vhvlie elementReset_block__18vhvli4 sprinkles_width_full_mobile__onxwjupp HorizontalAutoScroller_item__2i92q04"
              >
                <span />
              </div>
            </div>
          </div>
          <div
            class="elementReset_resetVariants__18vhvlid elementReset_resetVariants_as_div__18vhvlie elementReset_block__18vhvli4 Columns_makeResponsiveStyle_key_bp__15fwc18g Columns_makeResponsiveStyle_key_bp__15fwc181k Column_flexBasis_1/2_mobile__1ycz12q0 Column_columnStyle__1ycz12q1g Column_columnStyle_grow_false__1ycz12q1n Column__1ycz12q1e sprinkles_flexGrow_0_mobile__onxwjuyx Column_columnStyle_noShrink_true__1ycz12q1o Column__1ycz12q1f sprinkles_flexShrink_0_mobile__onxwjuz9 Column_columnStyle_alignSelf_stretch__1ycz12q1k Column__1ycz12q1b sprinkles_alignSelf_stretch_mobile__onxwjuwx"
          >
            <div
              class="elementReset_resetVariants__18vhvlid elementReset_resetVariants_as_div__18vhvlie elementReset_block__18vhvli4 sprinkles_display_flex_mobile__onxwjuf5 sprinkles_height_full_mobile__onxwjuo5 sprinkles_width_full_mobile__onxwjupp sprinkles_justifyContent_stretch_mobile__onxwjuxp"
            >
              <div
                class="elementReset_resetVariants__18vhvlid elementReset_resetVariants_as_div__18vhvlie elementReset_block__18vhvli4 sprinkles_width_full_mobile__onxwjupp HorizontalAutoScroller_item__2i92q04"
              >
                <span />
              </div>
            </div>
          </div>
          <div
            class="elementReset_resetVariants__18vhvlid elementReset_resetVariants_as_div__18vhvlie elementReset_block__18vhvli4 Columns_makeResponsiveStyle_key_bp__15fwc18g Columns_makeResponsiveStyle_key_bp__15fwc181k Column_flexBasis_1/2_mobile__1ycz12q0 Column_columnStyle__1ycz12q1g Column_columnStyle_grow_false__1ycz12q1n Column__1ycz12q1e sprinkles_flexGrow_0_mobile__onxwjuyx Column_columnStyle_noShrink_true__1ycz12q1o Column__1ycz12q1f sprinkles_flexShrink_0_mobile__onxwjuz9 Column_columnStyle_alignSelf_stretch__1ycz12q1k Column__1ycz12q1b sprinkles_alignSelf_stretch_mobile__onxwjuwx"
          >
            <div
              class="elementReset_resetVariants__18vhvlid elementReset_resetVariants_as_div__18vhvlie elementReset_block__18vhvli4 sprinkles_display_flex_mobile__onxwjuf5 sprinkles_height_full_mobile__onxwjuo5 sprinkles_width_full_mobile__onxwjupp sprinkles_justifyContent_stretch_mobile__onxwjuxp"
            >
              <div
                class="elementReset_resetVariants__18vhvlid elementReset_resetVariants_as_div__18vhvlie elementReset_block__18vhvli4 sprinkles_width_full_mobile__onxwjupp HorizontalAutoScroller_item__2i92q04"
              >
                <span />
              </div>
            </div>
          </div>
          <div
            class="elementReset_resetVariants__18vhvlid elementReset_resetVariants_as_div__18vhvlie elementReset_block__18vhvli4 Columns_makeResponsiveStyle_key_bp__15fwc18g Columns_makeResponsiveStyle_key_bp__15fwc181k Column_flexBasis_1/2_mobile__1ycz12q0 Column_columnStyle__1ycz12q1g Column_columnStyle_grow_false__1ycz12q1n Column__1ycz12q1e sprinkles_flexGrow_0_mobile__onxwjuyx Column_columnStyle_noShrink_true__1ycz12q1o Column__1ycz12q1f sprinkles_flexShrink_0_mobile__onxwjuz9 Column_columnStyle_alignSelf_stretch__1ycz12q1k Column__1ycz12q1b sprinkles_alignSelf_stretch_mobile__onxwjuwx"
          >
            <div
              class="elementReset_resetVariants__18vhvlid elementReset_resetVariants_as_div__18vhvlie elementReset_block__18vhvli4 sprinkles_display_flex_mobile__onxwjuf5 sprinkles_height_full_mobile__onxwjuo5 sprinkles_width_full_mobile__onxwjupp sprinkles_justifyContent_stretch_mobile__onxwjuxp"
            >
              <div
                class="elementReset_resetVariants__18vhvlid elementReset_resetVariants_as_div__18vhvlie elementReset_block__18vhvli4 sprinkles_width_full_mobile__onxwjupp HorizontalAutoScroller_item__2i92q04"
              >
                <span />
              </div>
            </div>
          </div>
          <div
            class="elementReset_resetVariants__18vhvlid elementReset_resetVariants_as_div__18vhvlie elementReset_block__18vhvli4 Columns_makeResponsiveStyle_key_bp__15fwc18g Columns_makeResponsiveStyle_key_bp__15fwc181k Column_columnStyle__1ycz12q1g Column_columnStyle_grow_false__1ycz12q1n Column__1ycz12q1e sprinkles_flexGrow_0_mobile__onxwjuyx Column_columnStyle_noShrink_true__1ycz12q1o Column__1ycz12q1f sprinkles_flexShrink_0_mobile__onxwjuz9"
          >
            <div
              class="elementReset_resetVariants__18vhvlid elementReset_resetVariants_as_div__18vhvlie elementReset_block__18vhvli4 sprinkles_display_flex_mobile__onxwjuf5 sprinkles_height_full_mobile__onxwjuo5 sprinkles_width_full_mobile__onxwjupp HorizontalAutoScroller_controllerCol__2i92q01"
            >
              <span />
            </div>
          </div>
        </div>
        <div
          class="elementReset_resetVariants__18vhvlid elementReset_resetVariants_as_div__18vhvlie elementReset_block__18vhvli4 sprinkles_display_flex_mobile__onxwjuf5 sprinkles_position_absolute_mobile__onxwjuh5 sprinkles_alignItems_center_mobile__onxwjuvd sprinkles_justifyContent_flexEnd_mobile__onxwjuxd HorizontalAutoScroller_controllerBtn__2i92q00 HorizontalAutoScroller_nextBtn__2i92q03"
        >
          <button
            class="elementReset_resetVariants__18vhvlid elementReset_resetVariants_as_button__18vhvli12 elementReset_trimmedElement__18vhvli0 elementReset_button__18vhvli5 Button_button__p2yon56 Button__p2yon53 sprinkles_borderBottomStyle_none__onxwju86 sprinkles_borderLeftStyle_none__onxwju84 sprinkles_borderRightStyle_none__onxwju88 sprinkles_borderTopStyle_none__onxwju8a sprinkles_alignItems_center_mobile__onxwjuvd sprinkles_borderRadius_md_mobile__onxwjukd sprinkles_fontWeight_semiBold__onxwjue5 sprinkles_gap_1_mobile__onxwjuqp sprinkles_justifyContent_center_mobile__onxwjux1 sprinkles_position_relative_mobile__onxwjuh1 sprinkles_width_fit-content_mobile__onxwjupd focusOutline_focusOutlineStyle__tq83zq0 Button_button_size_medium__p2yon58 Button_button_shape_iconOnly__p2yon5c Button_button_intent_secondary__p2yon5f Button_button_minimal_false__p2yon5l Button_button_rounded_true__p2yon5m Button__p2yon54 sprinkles_borderRadius_pill_mobile__onxwjukt Button_button_compound_5__p2yon5u"
            type="button"
          >
            <span
              class="elementReset_resetVariants__18vhvlid elementReset_resetVariants_as_span__18vhvlim  sprinkles_display_block_mobile__onxwjuex Icon_makeResponsiveStyle_key_bp__1gy3ire4"
              data-od-component="icon"
            >
              <svg
                aria-hidden="true"
                class="elementReset_resetVariants__18vhvlid elementReset_resetVariants_as_div__18vhvlie elementReset_block__18vhvli4 sprinkles_display_block_mobile__onxwjuex sprinkles_width_full_mobile__onxwjupp sprinkles_height_full_mobile__onxwjuo5"
                fill="currentColor"
                focusable="false"
                viewBox="0 0 256 256"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M181.66 133.66l-80 80a8 8 0 0 1-11.32-11.32L164.69 128 90.34 53.66a8 8 0 0 1 11.32-11.32l80 80a8 8 0 0 1 0 11.32z"
                />
              </svg>
            </span>
          </button>
        </div>
      </div>
    </div>
    <div
      class="elementReset_resetVariants__18vhvlid elementReset_resetVariants_as_div__18vhvlie elementReset_block__18vhvli4"
    >
      <div
        class="elementReset_resetVariants__18vhvlid elementReset_resetVariants_as_div__18vhvlie elementReset_block__18vhvli4 sprinkles_width_full_mobile__onxwjupp Section_root__184s6x60 Section_width_small__184s6x61"
      >
        <div
          class="SliderProgress_root__17uw35s0"
          style="grid-template-columns: repeat(8, 1fr);"
        >
          <div
            class="elementReset_resetVariants__18vhvlid elementReset_resetVariants_as_div__18vhvlie elementReset_block__18vhvli4 sprinkles_position_relative_mobile__onxwjuh1 SliderProgress_step__17uw35s1"
          >
            <div
              class="elementReset_resetVariants__18vhvlid elementReset_resetVariants_as_div__18vhvlie elementReset_block__18vhvli4 sprinkles_display_block_mobile__onxwjuex sprinkles_position_absolute_mobile__onxwjuh5 sprinkles_backgroundColor_green600__onxwjubj ProgressStep_item__15qfq7e2 ProgressStep_empty__15qfq7e0"
            />
            <div
              class="elementReset_resetVariants__18vhvlid elementReset_resetVariants_as_div__18vhvlie elementReset_block__18vhvli4 sprinkles_display_block_mobile__onxwjuex sprinkles_position_absolute_mobile__onxwjuh5 sprinkles_backgroundColor_green600__onxwjubj ProgressStep_item__15qfq7e2 ProgressStep_fill__15qfq7e3 ProgressStep_active__15qfq7e4 ProgressStep_paused__15qfq7e5"
              style="animation-duration: 10s;"
            />
          </div>
          <div
            class="elementReset_resetVariants__18vhvlid elementReset_resetVariants_as_div__18vhvlie elementReset_block__18vhvli4 sprinkles_position_relative_mobile__onxwjuh1 SliderProgress_step__17uw35s1"
          >
            <div
              class="elementReset_resetVariants__18vhvlid elementReset_resetVariants_as_div__18vhvlie elementReset_block__18vhvli4 sprinkles_display_block_mobile__onxwjuex sprinkles_position_absolute_mobile__onxwjuh5 sprinkles_backgroundColor_green600__onxwjubj ProgressStep_item__15qfq7e2 ProgressStep_empty__15qfq7e0"
            />
            <div
              class="elementReset_resetVariants__18vhvlid elementReset_resetVariants_as_div__18vhvlie elementReset_block__18vhvli4 sprinkles_display_none_mobile__onxwjuet sprinkles_position_absolute_mobile__onxwjuh5 sprinkles_backgroundColor_green600__onxwjubj ProgressStep_item__15qfq7e2 ProgressStep_fill__15qfq7e3"
              style="animation-duration: 10s;"
            />
          </div>
          <div
            class="elementReset_resetVariants__18vhvlid elementReset_resetVariants_as_div__18vhvlie elementReset_block__18vhvli4 sprinkles_position_relative_mobile__onxwjuh1 SliderProgress_step__17uw35s1"
          >
            <div
              class="elementReset_resetVariants__18vhvlid elementReset_resetVariants_as_div__18vhvlie elementReset_block__18vhvli4 sprinkles_display_block_mobile__onxwjuex sprinkles_position_absolute_mobile__onxwjuh5 sprinkles_backgroundColor_green600__onxwjubj ProgressStep_item__15qfq7e2 ProgressStep_empty__15qfq7e0"
            />
            <div
              class="elementReset_resetVariants__18vhvlid elementReset_resetVariants_as_div__18vhvlie elementReset_block__18vhvli4 sprinkles_display_none_mobile__onxwjuet sprinkles_position_absolute_mobile__onxwjuh5 sprinkles_backgroundColor_green600__onxwjubj ProgressStep_item__15qfq7e2 ProgressStep_fill__15qfq7e3"
              style="animation-duration: 10s;"
            />
          </div>
          <div
            class="elementReset_resetVariants__18vhvlid elementReset_resetVariants_as_div__18vhvlie elementReset_block__18vhvli4 sprinkles_position_relative_mobile__onxwjuh1 SliderProgress_step__17uw35s1"
          >
            <div
              class="elementReset_resetVariants__18vhvlid elementReset_resetVariants_as_div__18vhvlie elementReset_block__18vhvli4 sprinkles_display_block_mobile__onxwjuex sprinkles_position_absolute_mobile__onxwjuh5 sprinkles_backgroundColor_green600__onxwjubj ProgressStep_item__15qfq7e2 ProgressStep_empty__15qfq7e0"
            />
            <div
              class="elementReset_resetVariants__18vhvlid elementReset_resetVariants_as_div__18vhvlie elementReset_block__18vhvli4 sprinkles_display_none_mobile__onxwjuet sprinkles_position_absolute_mobile__onxwjuh5 sprinkles_backgroundColor_green600__onxwjubj ProgressStep_item__15qfq7e2 ProgressStep_fill__15qfq7e3"
              style="animation-duration: 10s;"
            />
          </div>
          <div
            class="elementReset_resetVariants__18vhvlid elementReset_resetVariants_as_div__18vhvlie elementReset_block__18vhvli4 sprinkles_position_relative_mobile__onxwjuh1 SliderProgress_step__17uw35s1"
          >
            <div
              class="elementReset_resetVariants__18vhvlid elementReset_resetVariants_as_div__18vhvlie elementReset_block__18vhvli4 sprinkles_display_block_mobile__onxwjuex sprinkles_position_absolute_mobile__onxwjuh5 sprinkles_backgroundColor_green600__onxwjubj ProgressStep_item__15qfq7e2 ProgressStep_empty__15qfq7e0"
            />
            <div
              class="elementReset_resetVariants__18vhvlid elementReset_resetVariants_as_div__18vhvlie elementReset_block__18vhvli4 sprinkles_display_none_mobile__onxwjuet sprinkles_position_absolute_mobile__onxwjuh5 sprinkles_backgroundColor_green600__onxwjubj ProgressStep_item__15qfq7e2 ProgressStep_fill__15qfq7e3"
              style="animation-duration: 10s;"
            />
          </div>
          <div
            class="elementReset_resetVariants__18vhvlid elementReset_resetVariants_as_div__18vhvlie elementReset_block__18vhvli4 sprinkles_position_relative_mobile__onxwjuh1 SliderProgress_step__17uw35s1"
          >
            <div
              class="elementReset_resetVariants__18vhvlid elementReset_resetVariants_as_div__18vhvlie elementReset_block__18vhvli4 sprinkles_display_block_mobile__onxwjuex sprinkles_position_absolute_mobile__onxwjuh5 sprinkles_backgroundColor_green600__onxwjubj ProgressStep_item__15qfq7e2 ProgressStep_empty__15qfq7e0"
            />
            <div
              class="elementReset_resetVariants__18vhvlid elementReset_resetVariants_as_div__18vhvlie elementReset_block__18vhvli4 sprinkles_display_none_mobile__onxwjuet sprinkles_position_absolute_mobile__onxwjuh5 sprinkles_backgroundColor_green600__onxwjubj ProgressStep_item__15qfq7e2 ProgressStep_fill__15qfq7e3"
              style="animation-duration: 10s;"
            />
          </div>
          <div
            class="elementReset_resetVariants__18vhvlid elementReset_resetVariants_as_div__18vhvlie elementReset_block__18vhvli4 sprinkles_position_relative_mobile__onxwjuh1 SliderProgress_step__17uw35s1"
          >
            <div
              class="elementReset_resetVariants__18vhvlid elementReset_resetVariants_as_div__18vhvlie elementReset_block__18vhvli4 sprinkles_display_block_mobile__onxwjuex sprinkles_position_absolute_mobile__onxwjuh5 sprinkles_backgroundColor_green600__onxwjubj ProgressStep_item__15qfq7e2 ProgressStep_empty__15qfq7e0"
            />
            <div
              class="elementReset_resetVariants__18vhvlid elementReset_resetVariants_as_div__18vhvlie elementReset_block__18vhvli4 sprinkles_display_none_mobile__onxwjuet sprinkles_position_absolute_mobile__onxwjuh5 sprinkles_backgroundColor_green600__onxwjubj ProgressStep_item__15qfq7e2 ProgressStep_fill__15qfq7e3"
              style="animation-duration: 10s;"
            />
          </div>
          <div
            class="elementReset_resetVariants__18vhvlid elementReset_resetVariants_as_div__18vhvlie elementReset_block__18vhvli4 sprinkles_position_relative_mobile__onxwjuh1 SliderProgress_step__17uw35s1"
          >
            <div
              class="elementReset_resetVariants__18vhvlid elementReset_resetVariants_as_div__18vhvlie elementReset_block__18vhvli4 sprinkles_display_block_mobile__onxwjuex sprinkles_position_absolute_mobile__onxwjuh5 sprinkles_backgroundColor_green600__onxwjubj ProgressStep_item__15qfq7e2 ProgressStep_empty__15qfq7e0"
            />
            <div
              class="elementReset_resetVariants__18vhvlid elementReset_resetVariants_as_div__18vhvlie elementReset_block__18vhvli4 sprinkles_display_none_mobile__onxwjuet sprinkles_position_absolute_mobile__onxwjuh5 sprinkles_backgroundColor_green600__onxwjubj ProgressStep_item__15qfq7e2 ProgressStep_fill__15qfq7e3"
              style="animation-duration: 10s;"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<HorizontalAutoScroller /> > should match the snapshot with custom slider colour 1`] = `
<div
  class="theme_OD_Base__j49br80"
  data-od-component="provider"
>
  <div
    class="elementReset_resetVariants__18vhvlid elementReset_resetVariants_as_div__18vhvlie elementReset_block__18vhvli4 sprinkles_display_flex_mobile__onxwjuf5 sprinkles_flexDirection_column_mobile__onxwjuyh sprinkles_gap_5_mobile__onxwjur5"
    data-od-component="stack"
  >
    <div
      class="elementReset_resetVariants__18vhvlid elementReset_resetVariants_as_div__18vhvlie elementReset_block__18vhvli4"
    >
      <div
        class="elementReset_resetVariants__18vhvlid elementReset_resetVariants_as_div__18vhvlie elementReset_block__18vhvli4 sprinkles_overflow_hidden_mobile__onxwjug1 sprinkles_position_relative_mobile__onxwjuh1"
      >
        <div
          class="elementReset_resetVariants__18vhvlid elementReset_resetVariants_as_div__18vhvlie elementReset_block__18vhvli4 sprinkles_display_flex_mobile__onxwjuf5 sprinkles_position_absolute_mobile__onxwjuh5 sprinkles_alignItems_center_mobile__onxwjuvd sprinkles_justifyContent_start_mobile__onxwjuxl HorizontalAutoScroller_controllerBtn__2i92q00 HorizontalAutoScroller_prevBtn__2i92q02"
        >
          <button
            class="elementReset_resetVariants__18vhvlid elementReset_resetVariants_as_button__18vhvli12 elementReset_trimmedElement__18vhvli0 elementReset_button__18vhvli5 Button_button__p2yon56 Button__p2yon53 sprinkles_borderBottomStyle_none__onxwju86 sprinkles_borderLeftStyle_none__onxwju84 sprinkles_borderRightStyle_none__onxwju88 sprinkles_borderTopStyle_none__onxwju8a sprinkles_alignItems_center_mobile__onxwjuvd sprinkles_borderRadius_md_mobile__onxwjukd sprinkles_fontWeight_semiBold__onxwjue5 sprinkles_gap_1_mobile__onxwjuqp sprinkles_justifyContent_center_mobile__onxwjux1 sprinkles_position_relative_mobile__onxwjuh1 sprinkles_width_fit-content_mobile__onxwjupd focusOutline_focusOutlineStyle__tq83zq0 Button_button_size_medium__p2yon58 Button_button_shape_iconOnly__p2yon5c Button_button_intent_secondary__p2yon5f Button_button_minimal_false__p2yon5l Button_button_rounded_true__p2yon5m Button__p2yon54 sprinkles_borderRadius_pill_mobile__onxwjukt Button_button_compound_5__p2yon5u"
            type="button"
          >
            <span
              class="elementReset_resetVariants__18vhvlid elementReset_resetVariants_as_span__18vhvlim  sprinkles_display_block_mobile__onxwjuex Icon_makeResponsiveStyle_key_bp__1gy3ire4"
              data-od-component="icon"
            >
              <svg
                aria-hidden="true"
                class="elementReset_resetVariants__18vhvlid elementReset_resetVariants_as_div__18vhvlie elementReset_block__18vhvli4 sprinkles_display_block_mobile__onxwjuex sprinkles_width_full_mobile__onxwjupp sprinkles_height_full_mobile__onxwjuo5"
                fill="currentColor"
                focusable="false"
                viewBox="0 0 256 256"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M165.66 202.34a8 8 0 0 1-11.32 11.32l-80-80a8 8 0 0 1 0-11.32l80-80a8 8 0 0 1 11.32 11.32L91.31 128z"
                />
              </svg>
            </span>
          </button>
        </div>
        <div
          class="elementReset_resetVariants__18vhvlid elementReset_resetVariants_as_div__18vhvlie elementReset_block__18vhvli4 sprinkles_overflow_hidden_mobile__onxwjug1 sprinkles_width_full_mobile__onxwjupp useNegativeMarginLeft_makeResponsiveStyle_key_bp__10sqwm2g useNegativeMarginTop_makeResponsiveStyle_key_bp__rvovxwg Columns__15fwc182h Columns__15fwc1828 sprinkles_display_flex_mobile__onxwjuf5 sprinkles_flexDirection_row_mobile__onxwjuyd Columns_columnsStyle_align_stretch__15fwc182i Columns__15fwc1829 sprinkles_alignContent_stretch_mobile__onxwjuup sprinkles_alignItems_stretch_mobile__onxwjuw1 Columns_columnsStyle_noWrap_true__15fwc182o Columns__15fwc182f sprinkles_flexWrap_nowrap_mobile__onxwjuzh Columns_columnsStyle_wrappingDirection_default__15fwc182p"
          data-od-component="columns"
        >
          <div
            class="elementReset_resetVariants__18vhvlid elementReset_resetVariants_as_div__18vhvlie elementReset_block__18vhvli4 Columns_makeResponsiveStyle_key_bp__15fwc18g Columns_makeResponsiveStyle_key_bp__15fwc181k Column_columnStyle__1ycz12q1g Column_columnStyle_grow_false__1ycz12q1n Column__1ycz12q1e sprinkles_flexGrow_0_mobile__onxwjuyx Column_columnStyle_noShrink_true__1ycz12q1o Column__1ycz12q1f sprinkles_flexShrink_0_mobile__onxwjuz9"
          >
            <div
              class="elementReset_resetVariants__18vhvlid elementReset_resetVariants_as_div__18vhvlie elementReset_block__18vhvli4 sprinkles_display_flex_mobile__onxwjuf5 sprinkles_height_full_mobile__onxwjuo5 sprinkles_width_full_mobile__onxwjupp HorizontalAutoScroller_controllerCol__2i92q01"
            >
              <span />
            </div>
          </div>
          <div
            class="elementReset_resetVariants__18vhvlid elementReset_resetVariants_as_div__18vhvlie elementReset_block__18vhvli4 Columns_makeResponsiveStyle_key_bp__15fwc18g Columns_makeResponsiveStyle_key_bp__15fwc181k Column_flexBasis_1/2_mobile__1ycz12q0 Column_columnStyle__1ycz12q1g Column_columnStyle_grow_false__1ycz12q1n Column__1ycz12q1e sprinkles_flexGrow_0_mobile__onxwjuyx Column_columnStyle_noShrink_true__1ycz12q1o Column__1ycz12q1f sprinkles_flexShrink_0_mobile__onxwjuz9 Column_columnStyle_alignSelf_stretch__1ycz12q1k Column__1ycz12q1b sprinkles_alignSelf_stretch_mobile__onxwjuwx"
          >
            <div
              class="elementReset_resetVariants__18vhvlid elementReset_resetVariants_as_div__18vhvlie elementReset_block__18vhvli4 sprinkles_display_flex_mobile__onxwjuf5 sprinkles_height_full_mobile__onxwjuo5 sprinkles_width_full_mobile__onxwjupp sprinkles_justifyContent_stretch_mobile__onxwjuxp"
            >
              <div
                class="elementReset_resetVariants__18vhvlid elementReset_resetVariants_as_div__18vhvlie elementReset_block__18vhvli4 sprinkles_width_full_mobile__onxwjupp HorizontalAutoScroller_item__2i92q04 HorizontalAutoScroller_active__2i92q05"
              >
                <span />
              </div>
            </div>
          </div>
          <div
            class="elementReset_resetVariants__18vhvlid elementReset_resetVariants_as_div__18vhvlie elementReset_block__18vhvli4 Columns_makeResponsiveStyle_key_bp__15fwc18g Columns_makeResponsiveStyle_key_bp__15fwc181k Column_flexBasis_1/2_mobile__1ycz12q0 Column_columnStyle__1ycz12q1g Column_columnStyle_grow_false__1ycz12q1n Column__1ycz12q1e sprinkles_flexGrow_0_mobile__onxwjuyx Column_columnStyle_noShrink_true__1ycz12q1o Column__1ycz12q1f sprinkles_flexShrink_0_mobile__onxwjuz9 Column_columnStyle_alignSelf_stretch__1ycz12q1k Column__1ycz12q1b sprinkles_alignSelf_stretch_mobile__onxwjuwx"
          >
            <div
              class="elementReset_resetVariants__18vhvlid elementReset_resetVariants_as_div__18vhvlie elementReset_block__18vhvli4 sprinkles_display_flex_mobile__onxwjuf5 sprinkles_height_full_mobile__onxwjuo5 sprinkles_width_full_mobile__onxwjupp sprinkles_justifyContent_stretch_mobile__onxwjuxp"
            >
              <div
                class="elementReset_resetVariants__18vhvlid elementReset_resetVariants_as_div__18vhvlie elementReset_block__18vhvli4 sprinkles_width_full_mobile__onxwjupp HorizontalAutoScroller_item__2i92q04"
              >
                <span />
              </div>
            </div>
          </div>
          <div
            class="elementReset_resetVariants__18vhvlid elementReset_resetVariants_as_div__18vhvlie elementReset_block__18vhvli4 Columns_makeResponsiveStyle_key_bp__15fwc18g Columns_makeResponsiveStyle_key_bp__15fwc181k Column_flexBasis_1/2_mobile__1ycz12q0 Column_columnStyle__1ycz12q1g Column_columnStyle_grow_false__1ycz12q1n Column__1ycz12q1e sprinkles_flexGrow_0_mobile__onxwjuyx Column_columnStyle_noShrink_true__1ycz12q1o Column__1ycz12q1f sprinkles_flexShrink_0_mobile__onxwjuz9 Column_columnStyle_alignSelf_stretch__1ycz12q1k Column__1ycz12q1b sprinkles_alignSelf_stretch_mobile__onxwjuwx"
          >
            <div
              class="elementReset_resetVariants__18vhvlid elementReset_resetVariants_as_div__18vhvlie elementReset_block__18vhvli4 sprinkles_display_flex_mobile__onxwjuf5 sprinkles_height_full_mobile__onxwjuo5 sprinkles_width_full_mobile__onxwjupp sprinkles_justifyContent_stretch_mobile__onxwjuxp"
            >
              <div
                class="elementReset_resetVariants__18vhvlid elementReset_resetVariants_as_div__18vhvlie elementReset_block__18vhvli4 sprinkles_width_full_mobile__onxwjupp HorizontalAutoScroller_item__2i92q04"
              >
                <span />
              </div>
            </div>
          </div>
          <div
            class="elementReset_resetVariants__18vhvlid elementReset_resetVariants_as_div__18vhvlie elementReset_block__18vhvli4 Columns_makeResponsiveStyle_key_bp__15fwc18g Columns_makeResponsiveStyle_key_bp__15fwc181k Column_flexBasis_1/2_mobile__1ycz12q0 Column_columnStyle__1ycz12q1g Column_columnStyle_grow_false__1ycz12q1n Column__1ycz12q1e sprinkles_flexGrow_0_mobile__onxwjuyx Column_columnStyle_noShrink_true__1ycz12q1o Column__1ycz12q1f sprinkles_flexShrink_0_mobile__onxwjuz9 Column_columnStyle_alignSelf_stretch__1ycz12q1k Column__1ycz12q1b sprinkles_alignSelf_stretch_mobile__onxwjuwx"
          >
            <div
              class="elementReset_resetVariants__18vhvlid elementReset_resetVariants_as_div__18vhvlie elementReset_block__18vhvli4 sprinkles_display_flex_mobile__onxwjuf5 sprinkles_height_full_mobile__onxwjuo5 sprinkles_width_full_mobile__onxwjupp sprinkles_justifyContent_stretch_mobile__onxwjuxp"
            >
              <div
                class="elementReset_resetVariants__18vhvlid elementReset_resetVariants_as_div__18vhvlie elementReset_block__18vhvli4 sprinkles_width_full_mobile__onxwjupp HorizontalAutoScroller_item__2i92q04"
              >
                <span />
              </div>
            </div>
          </div>
          <div
            class="elementReset_resetVariants__18vhvlid elementReset_resetVariants_as_div__18vhvlie elementReset_block__18vhvli4 Columns_makeResponsiveStyle_key_bp__15fwc18g Columns_makeResponsiveStyle_key_bp__15fwc181k Column_columnStyle__1ycz12q1g Column_columnStyle_grow_false__1ycz12q1n Column__1ycz12q1e sprinkles_flexGrow_0_mobile__onxwjuyx Column_columnStyle_noShrink_true__1ycz12q1o Column__1ycz12q1f sprinkles_flexShrink_0_mobile__onxwjuz9"
          >
            <div
              class="elementReset_resetVariants__18vhvlid elementReset_resetVariants_as_div__18vhvlie elementReset_block__18vhvli4 sprinkles_display_flex_mobile__onxwjuf5 sprinkles_height_full_mobile__onxwjuo5 sprinkles_width_full_mobile__onxwjupp HorizontalAutoScroller_controllerCol__2i92q01"
            >
              <span />
            </div>
          </div>
        </div>
        <div
          class="elementReset_resetVariants__18vhvlid elementReset_resetVariants_as_div__18vhvlie elementReset_block__18vhvli4 sprinkles_display_flex_mobile__onxwjuf5 sprinkles_position_absolute_mobile__onxwjuh5 sprinkles_alignItems_center_mobile__onxwjuvd sprinkles_justifyContent_flexEnd_mobile__onxwjuxd HorizontalAutoScroller_controllerBtn__2i92q00 HorizontalAutoScroller_nextBtn__2i92q03"
        >
          <button
            class="elementReset_resetVariants__18vhvlid elementReset_resetVariants_as_button__18vhvli12 elementReset_trimmedElement__18vhvli0 elementReset_button__18vhvli5 Button_button__p2yon56 Button__p2yon53 sprinkles_borderBottomStyle_none__onxwju86 sprinkles_borderLeftStyle_none__onxwju84 sprinkles_borderRightStyle_none__onxwju88 sprinkles_borderTopStyle_none__onxwju8a sprinkles_alignItems_center_mobile__onxwjuvd sprinkles_borderRadius_md_mobile__onxwjukd sprinkles_fontWeight_semiBold__onxwjue5 sprinkles_gap_1_mobile__onxwjuqp sprinkles_justifyContent_center_mobile__onxwjux1 sprinkles_position_relative_mobile__onxwjuh1 sprinkles_width_fit-content_mobile__onxwjupd focusOutline_focusOutlineStyle__tq83zq0 Button_button_size_medium__p2yon58 Button_button_shape_iconOnly__p2yon5c Button_button_intent_secondary__p2yon5f Button_button_minimal_false__p2yon5l Button_button_rounded_true__p2yon5m Button__p2yon54 sprinkles_borderRadius_pill_mobile__onxwjukt Button_button_compound_5__p2yon5u"
            type="button"
          >
            <span
              class="elementReset_resetVariants__18vhvlid elementReset_resetVariants_as_span__18vhvlim  sprinkles_display_block_mobile__onxwjuex Icon_makeResponsiveStyle_key_bp__1gy3ire4"
              data-od-component="icon"
            >
              <svg
                aria-hidden="true"
                class="elementReset_resetVariants__18vhvlid elementReset_resetVariants_as_div__18vhvlie elementReset_block__18vhvli4 sprinkles_display_block_mobile__onxwjuex sprinkles_width_full_mobile__onxwjupp sprinkles_height_full_mobile__onxwjuo5"
                fill="currentColor"
                focusable="false"
                viewBox="0 0 256 256"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M181.66 133.66l-80 80a8 8 0 0 1-11.32-11.32L164.69 128 90.34 53.66a8 8 0 0 1 11.32-11.32l80 80a8 8 0 0 1 0 11.32z"
                />
              </svg>
            </span>
          </button>
        </div>
      </div>
    </div>
    <div
      class="elementReset_resetVariants__18vhvlid elementReset_resetVariants_as_div__18vhvlie elementReset_block__18vhvli4"
    >
      <div
        class="elementReset_resetVariants__18vhvlid elementReset_resetVariants_as_div__18vhvlie elementReset_block__18vhvli4 sprinkles_width_full_mobile__onxwjupp Section_root__184s6x60 Section_width_small__184s6x61"
      >
        <div
          class="SliderProgress_root__17uw35s0"
          style="grid-template-columns: repeat(4, 1fr);"
        >
          <div
            class="elementReset_resetVariants__18vhvlid elementReset_resetVariants_as_div__18vhvlie elementReset_block__18vhvli4 sprinkles_position_relative_mobile__onxwjuh1 SliderProgress_step__17uw35s1"
          >
            <div
              class="elementReset_resetVariants__18vhvlid elementReset_resetVariants_as_div__18vhvlie elementReset_block__18vhvli4 sprinkles_display_block_mobile__onxwjuex sprinkles_position_absolute_mobile__onxwjuh5 sprinkles_backgroundColor_yellow500__onxwjuc0 ProgressStep_item__15qfq7e2 ProgressStep_empty__15qfq7e0"
            />
            <div
              class="elementReset_resetVariants__18vhvlid elementReset_resetVariants_as_div__18vhvlie elementReset_block__18vhvli4 sprinkles_display_block_mobile__onxwjuex sprinkles_position_absolute_mobile__onxwjuh5 sprinkles_backgroundColor_yellow500__onxwjuc0 ProgressStep_item__15qfq7e2 ProgressStep_fill__15qfq7e3 ProgressStep_active__15qfq7e4 ProgressStep_paused__15qfq7e5"
              style="animation-duration: 10s;"
            />
          </div>
          <div
            class="elementReset_resetVariants__18vhvlid elementReset_resetVariants_as_div__18vhvlie elementReset_block__18vhvli4 sprinkles_position_relative_mobile__onxwjuh1 SliderProgress_step__17uw35s1"
          >
            <div
              class="elementReset_resetVariants__18vhvlid elementReset_resetVariants_as_div__18vhvlie elementReset_block__18vhvli4 sprinkles_display_block_mobile__onxwjuex sprinkles_position_absolute_mobile__onxwjuh5 sprinkles_backgroundColor_yellow500__onxwjuc0 ProgressStep_item__15qfq7e2 ProgressStep_empty__15qfq7e0"
            />
            <div
              class="elementReset_resetVariants__18vhvlid elementReset_resetVariants_as_div__18vhvlie elementReset_block__18vhvli4 sprinkles_display_none_mobile__onxwjuet sprinkles_position_absolute_mobile__onxwjuh5 sprinkles_backgroundColor_yellow500__onxwjuc0 ProgressStep_item__15qfq7e2 ProgressStep_fill__15qfq7e3"
              style="animation-duration: 10s;"
            />
          </div>
          <div
            class="elementReset_resetVariants__18vhvlid elementReset_resetVariants_as_div__18vhvlie elementReset_block__18vhvli4 sprinkles_position_relative_mobile__onxwjuh1 SliderProgress_step__17uw35s1"
          >
            <div
              class="elementReset_resetVariants__18vhvlid elementReset_resetVariants_as_div__18vhvlie elementReset_block__18vhvli4 sprinkles_display_block_mobile__onxwjuex sprinkles_position_absolute_mobile__onxwjuh5 sprinkles_backgroundColor_yellow500__onxwjuc0 ProgressStep_item__15qfq7e2 ProgressStep_empty__15qfq7e0"
            />
            <div
              class="elementReset_resetVariants__18vhvlid elementReset_resetVariants_as_div__18vhvlie elementReset_block__18vhvli4 sprinkles_display_none_mobile__onxwjuet sprinkles_position_absolute_mobile__onxwjuh5 sprinkles_backgroundColor_yellow500__onxwjuc0 ProgressStep_item__15qfq7e2 ProgressStep_fill__15qfq7e3"
              style="animation-duration: 10s;"
            />
          </div>
          <div
            class="elementReset_resetVariants__18vhvlid elementReset_resetVariants_as_div__18vhvlie elementReset_block__18vhvli4 sprinkles_position_relative_mobile__onxwjuh1 SliderProgress_step__17uw35s1"
          >
            <div
              class="elementReset_resetVariants__18vhvlid elementReset_resetVariants_as_div__18vhvlie elementReset_block__18vhvli4 sprinkles_display_block_mobile__onxwjuex sprinkles_position_absolute_mobile__onxwjuh5 sprinkles_backgroundColor_yellow500__onxwjuc0 ProgressStep_item__15qfq7e2 ProgressStep_empty__15qfq7e0"
            />
            <div
              class="elementReset_resetVariants__18vhvlid elementReset_resetVariants_as_div__18vhvlie elementReset_block__18vhvli4 sprinkles_display_none_mobile__onxwjuet sprinkles_position_absolute_mobile__onxwjuh5 sprinkles_backgroundColor_yellow500__onxwjuc0 ProgressStep_item__15qfq7e2 ProgressStep_fill__15qfq7e3"
              style="animation-duration: 10s;"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
